crates/es-fluent-derive/tests/ui/struct_validation_failure.rs
use es_fluent_derive::EsFluent;

#[derive(EsFluent)]
pub struct Invalid {
    #[fluent(skip, arg = "value")]
    value: i32,
}

fn main() {}
